--- a/package.json
+++ b/package.json
@@ -8,18 +8,25 @@
     "start": "npx ts-node --esm ./index.ts",
     "dev": "nodemon",
     "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --verbose"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.21.8",
+    "@babel/preset-env": "^7.21.5",
+    "@babel/preset-typescript": "^7.21.5",
+    "@types/jest": "^29.5.1",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@typescript-eslint/parser": "^5.59.2",
+    "babel-jest": "^29.5.0",
     "eslint": "^8.39.0",
     "eslint-config-xo": "^0.43.1",
     "eslint-config-xo-typescript": "^0.57.0",
+    "jest": "^29.5.0",
     "nodemon": "^2.0.22",
+    "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   },
@@ -30,6 +37,7 @@
     "@types/node": "^18.16.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "eslint-plugin-jest": "^27.2.1",
     "express": "^4.18.2",
     "mongodb": "^5.3.0",
     "mongoose": "^7.1.0",
