--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,16 @@
 {
     "compilerOptions": {
-        "strictNullChecks": true,
-        "module": "NodeNext",
-        "esModuleInterop": true,
-        "moduleResolution": "nodenext",
-        "moduleDetection": "auto",
-        "target": "ES2020",
-        "sourceMap": true,
-        "outDir": "dist",
+      "lib": ["ESNext"],
+      "strictNullChecks": true,
+      "module": "NodeNext",
+      "esModuleInterop": true,
+      "moduleResolution": "nodenext",
+      "moduleDetection": "auto",
+      "types": ["node", "jest"],
+      "allowSyntheticDefaultImports": true,
+      "target": "ES2020",
+      "sourceMap": true,
+      "outDir": "dist",
     },
     "include": ["./**/*.ts", "index.ts"],
     "exclude": ["node_modules"]
