--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "dotenv": "^16.0.3",
     "eslint-plugin-jest": "^27.2.1",
     "express": "^4.18.2",
+    "lodash": "^4.17.21",
     "mongodb": "^5.3.0",
     "mongoose": "^7.1.0",
     "morgan": "^1.10.0"
