--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 MONGO_URI='mongodb+srv://orbangdavid24:daGc9UweMjMCTdh9@cluster0.sjpb3xy.mongodb.net/?retryWrites=true&w=majority'
+TEST_MONGO_URI='mongodb+srv://orbangdavid24:daGc9UweMjMCTdh9@cluster0.sjpb3xy.mongodb.net/?retryWrites=true&w=majority'
 
 PORT=3003
