--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "npx ts-node --esm ./index.ts",
+    "start": "cross-env NODE_ENV=production npx ts-node --esm ./index.ts",
     "dev": "nodemon",
     "build": "tsc",
-    "test": "jest --verbose"
+    "test": "cross-env NODE_ENV=test jest --verbose --runInBand"
   },
   "keywords": [],
   "author": "",
@@ -26,6 +26,7 @@
     "eslint-config-xo-typescript": "^0.57.0",
     "jest": "^29.5.0",
     "nodemon": "^2.0.22",
+    "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
@@ -35,7 +36,9 @@
     "@types/express": "^4.17.17",
     "@types/morgan": "^1.9.4",
     "@types/node": "^18.16.3",
+    "@types/supertest": "^2.0.12",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "eslint-plugin-jest": "^27.2.1",
     "express": "^4.18.2",
