--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "dotenv": "^16.0.3",
     "eslint-plugin-jest": "^27.2.1",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "lodash": "^4.17.21",
     "mongodb": "^5.3.0",
     "mongoose": "^7.1.0",
