--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@babel/preset-env": "^7.21.5",
     "@babel/preset-typescript": "^7.21.5",
     "@types/jest": "^29.5.1",
+    "@types/passport-local-mongoose": "^6.1.1",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@typescript-eslint/parser": "^5.59.2",
     "babel-jest": "^29.5.0",
@@ -35,6 +36,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/mongoose-unique-validator": "^1.0.7",
     "@types/morgan": "^1.9.4",
     "@types/node": "^18.16.3",
     "@types/supertest": "^2.0.12",
@@ -48,6 +50,7 @@
     "lodash": "^4.17.21",
     "mongodb": "^5.3.0",
     "mongoose": "^7.1.0",
+    "mongoose-unique-validator": "^4.0.0",
     "morgan": "^1.10.0"
   }
 }
