--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ MONGO_URI='mongodb+srv://orbangdavid24:daGc9UweMjMCTdh9@cluster0.sjpb3xy.mongodb
 TEST_MONGO_URI='mongodb+srv://orbangdavid24:daGc9UweMjMCTdh9@cluster0.sjpb3xy.mongodb.net/?retryWrites=true&w=majority'
 
 PORT=3003
+
+SECRET='DAVID'
