--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/mongoose-unique-validator": "^1.0.7",
     "@types/morgan": "^1.9.4",
     "@types/node": "^18.16.3",
@@ -47,6 +48,7 @@
     "eslint-plugin-jest": "^27.2.1",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
     "mongodb": "^5.3.0",
     "mongoose": "^7.1.0",
