--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint": "^8.39.0",
     "eslint-config-xo": "^0.43.1",
     "eslint-config-xo-typescript": "^0.57.0",
+    "esm-to-cjs": "^1.2.1",
     "jest": "^29.5.0",
     "nodemon": "^2.0.22",
     "supertest": "^6.3.3",
