--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "cross-env node --loader ts-node/esm ./index.ts",
     "dev": "nodemon",
     "build": "tsc",
-    "test": "cross-env NODE_ENV=test jest --verbose --runInBand --detectOpenHandles"
+    "test": "cross-env NODE_ENV=test jest --verbose --runInBand --detectOpenHandles",
+    "start:test": "cross-env NODE_ENV=test npm start"
   },
   "keywords": [],
   "author": "",
