--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "@typescript-eslint/parser": "^5.59.2",
     "babel-jest": "^29.5.0",
     "eslint": "^8.39.0",
+    "eslint-config-prettier": "^9.0.0",
     "eslint-config-xo": "^0.43.1",
     "eslint-config-xo-typescript": "^0.57.0",
     "esm-to-cjs": "^1.2.1",
     "jest": "^29.5.0",
     "nodemon": "^2.0.22",
+    "prettier": "3.0.3",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
